Bug 159146 - Trouble redrawing background for comment column after changing width
Summary: Trouble redrawing background for comment column after changing width
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha0+
Hardware: All All
: medium trivial
Assignee: Rafael Lima
URL:
Whiteboard: target:25.2.0 target:24.8.1
Keywords: implementationError
: 159851 (view as bug list)
Depends on:
Blocks: Writer-Comments
  Show dependency treegraph
 
Reported: 2024-01-12 11:36 UTC by steve
Modified: 2024-08-10 08:08 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot 2024-012 redraw background issue after resizing comment column width (428.54 KB, image/png)
2024-01-12 11:39 UTC, steve
Details
Screen Recording 2024-01-12 redrawing background trouble on macOS (1.34 MB, video/mp4)
2024-01-12 11:39 UTC, steve
Details

Note You need to log in before you can comment on or make changes to this bug.
Description steve 2024-01-12 11:36:53 UTC
Description:
https://bugs.documentfoundation.org/show_bug.cgi?id=73953 follow-up



Steps to Reproduce:
Change comment column width. The background drawing issue goes both ways: see actual results.

Actual Results:
- increase size: the yellow comment box is correctly redrawn but the background color for  the comment column is not
- decrease size: yellow box correctly redrawn, but not the background

Eventually scrolling the document will redraw the background and resolve the problem

Expected Results:
Would be nice to correctly draw the background instantly. While a cosmetic issue such things make for a problematic first impression.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: ba8f4bff6015013013df652efbfaf4d9ae10c881
CPU threads: 8; OS: macOS 13.6.3; UI render: Skia/Raster; VCL: osx
Locale: de-DE (en_DE.UTF-8); UI: en-US
Calc: threaded
Comment 1 steve 2024-01-12 11:39:18 UTC
Created attachment 191886 [details]
Screenshot 2024-012 redraw background issue after resizing comment column width
Comment 2 steve 2024-01-12 11:39:38 UTC
Created attachment 191887 [details]
Screen Recording 2024-01-12 redrawing background trouble on macOS
Comment 3 Dieter 2024-01-21 10:48:17 UTC
Steve, I'm not able to change comment column width (I'm using Windows 10). And taking into account bug 149145 it seems to be the current behaviour. So I don't understand, why you're able to do so.
Comment 4 steve 2024-01-21 11:39:14 UTC
@Dieter this is a new change. Please try reproducing with a recent main build from https://dev-builds.libreoffice.org/daily/master/current.html
Comment 5 stragu 2024-01-28 06:38:15 UTC
Not reproduced with gtk VCL plugin, but I can reproduced with gen:

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 2cedb1a19ad605df4e148589e9027512e4dd9265
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: x11
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Samuel, can you have a look?
Comment 6 stragu 2024-06-11 03:44:06 UTC
*** Bug 159851 has been marked as a duplicate of this bug. ***
Comment 7 stragu 2024-06-11 03:45:10 UTC
kf5 also affected, see duplicate bug 159851.
Samuel, what do you think?
Comment 8 Rafael Lima 2024-07-26 19:08:39 UTC
Proposed patch at:
https://gerrit.libreoffice.org/c/core/+/171039
Comment 9 Commit Notification 2024-08-05 22:23:10 UTC
Rafael Lima committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ec5235ddfd62ca490d13fbc2c91e740a44f9950e

tdf#159146 Fix layout after resizing commend width in Writer

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 steve 2024-08-08 12:18:59 UTC
Verified in Version: 25.2.0.0.alpha0+ (AARCH64) / LibreOffice Community
Build ID: ce0429edab26e961c73af2d4bdf1516cca05205b
CPU threads: 12; OS: macOS 14.6.1; UI render: Skia/Metal; VCL: osx
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

Thanks Rafael.
Comment 11 Commit Notification 2024-08-10 08:08:20 UTC
Rafael Lima committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/3e040de9d5bb9587613277015d77133b9e2e0791

tdf#159146 Fix layout after resizing commend width in Writer

It will be available in 24.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.