tdf#159146 Fix layout after resizing commend width in Writer

This patch ensure that resizing the comment sidebar will update the entire layout.

Change-Id: Ia3c805569525c558191b253d694ac1f2e99f2ace
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/171039
Tested-by: Jenkins
Reviewed-by: Rafael Lima <rafael.palma.lima@gmail.com>
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
(cherry picked from commit ec5235ddfd62ca490d13fbc2c91e740a44f9950e)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/171540
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>